parser/ru_parser.go
// Code generated from /home/tanx-pipefy/Desktop/UAM/22-Invierno/Traductores/tarea 4/RuLang2GoLang/Ru.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // Ru

import (
	"fmt"
	"strconv"
  "sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type RuParser struct {
	*antlr.BaseParser
}

var ruParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  literalNames           []string
  symbolicNames          []string
  ruleNames              []string
  predictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func ruParserInit() {
  staticData := &ruParserStaticData
  staticData.literalNames = []string{
    "", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", "'+'", 
    "'-'", "'*'", "'/'", "'%'", "'^'", "'!'", "';'", "'='", "'('", "')'", 
    "'{'", "'}'", "'true'", "'false'", "'nil'", "'if'", "'else'", "'while'", 
    "'log'", "'imprime'",
  }
  staticData.symbolicNames = []string{
    "", "OR", "AND", "IGUAL", "DIFQ", "MAYORQ", "MENORQ", "MENIG", "MAYIG", 
    "MAS", "MENOS", "MULT", "DIV", "MOD", "POW", "NOT", "PTOCOMA", "ASIGNA", 
    "APAR", "CPAR", "ALLAVE", "CLLAVE", "TRUE", "FALSE", "NIL", "IF", "ELSE", 
    "WHILE", "LOG", "IMPRIMIR", "ID", "INT", "FLOAT", "STRING", "COMENTARIO", 
    "ESPACIO", "OTRO",
  }
  staticData.ruleNames = []string{
    "programa", "bloque", "sentencia", "asignacion", "sentenciaIf", "bloqueCondicional", 
    "bloqueDeSentencia", "sentenciaWhile", "log", "imprimir", "expr", "atomo",
  }
  staticData.predictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// RuParserInit initializes any static state used to implement RuParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewRuParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func RuParserInit() {
  staticData := &ruParserStaticData
  staticData.once.Do(ruParserInit)
}

// NewRuParser produces a new parser instance for the optional input antlr.TokenStream.
func NewRuParser(input antlr.TokenStream) *RuParser {
	RuParserInit()
	this := new(RuParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &ruParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Ru.g4"

	return this
}


// RuParser tokens.
const (
	RuParserEOF = antlr.TokenEOF
	RuParserOR = 1
	RuParserAND = 2
	RuParserIGUAL = 3
	RuParserDIFQ = 4
	RuParserMAYORQ = 5
	RuParserMENORQ = 6
	RuParserMENIG = 7
	RuParserMAYIG = 8
	RuParserMAS = 9
	RuParserMENOS = 10
	RuParserMULT = 11
	RuParserDIV = 12
	RuParserMOD = 13
	RuParserPOW = 14
	RuParserNOT = 15
	RuParserPTOCOMA = 16
	RuParserASIGNA = 17
	RuParserAPAR = 18
	RuParserCPAR = 19
	RuParserALLAVE = 20
	RuParserCLLAVE = 21
	RuParserTRUE = 22
	RuParserFALSE = 23
	RuParserNIL = 24
	RuParserIF = 25
	RuParserELSE = 26
	RuParserWHILE = 27
	RuParserLOG = 28
	RuParserIMPRIMIR = 29
	RuParserID = 30
	RuParserINT = 31
	RuParserFLOAT = 32
	RuParserSTRING = 33
	RuParserCOMENTARIO = 34
	RuParserESPACIO = 35
	RuParserOTRO = 36
)

// RuParser rules.
const (
	RuParserRULE_programa = 0
	RuParserRULE_bloque = 1
	RuParserRULE_sentencia = 2
	RuParserRULE_asignacion = 3
	RuParserRULE_sentenciaIf = 4
	RuParserRULE_bloqueCondicional = 5
	RuParserRULE_bloqueDeSentencia = 6
	RuParserRULE_sentenciaWhile = 7
	RuParserRULE_log = 8
	RuParserRULE_imprimir = 9
	RuParserRULE_expr = 10
	RuParserRULE_atomo = 11
)

// IProgramaContext is an interface to support dynamic dispatch.
type IProgramaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramaContext differentiates from other interfaces.
	IsProgramaContext()
}

type ProgramaContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramaContext() *ProgramaContext {
	var p = new(ProgramaContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RuParserRULE_programa
	return p
}

func (*ProgramaContext) IsProgramaContext() {}

func NewProgramaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramaContext {
	var p = new(ProgramaContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RuParserRULE_programa

	return p
}

func (s *ProgramaContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramaContext) Bloque() IBloqueContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBloqueContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBloqueContext)
}

func (s *ProgramaContext) EOF() antlr.TerminalNode {
	return s.GetToken(RuParserEOF, 0)
}

func (s *ProgramaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ProgramaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.EnterPrograma(s)
	}
}

func (s *ProgramaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.ExitPrograma(s)
	}
}

func (s *ProgramaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case RuVisitor:
		return t.VisitPrograma(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *RuParser) Programa() (localctx IProgramaContext) {
	this := p
	_ = this

	localctx = NewProgramaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, RuParserRULE_programa)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(24)
		p.Bloque()
	}
	{
		p.SetState(25)
		p.Match(RuParserEOF)
	}



	return localctx
}


// IBloqueContext is an interface to support dynamic dispatch.
type IBloqueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBloqueContext differentiates from other interfaces.
	IsBloqueContext()
}

type BloqueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBloqueContext() *BloqueContext {
	var p = new(BloqueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RuParserRULE_bloque
	return p
}

func (*BloqueContext) IsBloqueContext() {}

func NewBloqueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BloqueContext {
	var p = new(BloqueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RuParserRULE_bloque

	return p
}

func (s *BloqueContext) GetParser() antlr.Parser { return s.parser }

func (s *BloqueContext) AllSentencia() []ISentenciaContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISentenciaContext); ok {
			len++
		}
	}

	tst := make([]ISentenciaContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISentenciaContext); ok {
			tst[i] = t.(ISentenciaContext)
			i++
		}
	}

	return tst
}

func (s *BloqueContext) Sentencia(i int) ISentenciaContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISentenciaContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISentenciaContext)
}

func (s *BloqueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BloqueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *BloqueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.EnterBloque(s)
	}
}

func (s *BloqueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.ExitBloque(s)
	}
}

func (s *BloqueContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case RuVisitor:
		return t.VisitBloque(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *RuParser) Bloque() (localctx IBloqueContext) {
	this := p
	_ = this

	localctx = NewBloqueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, RuParserRULE_bloque)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(30)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	for ((((_la - 25)) & -(0x1f+1)) == 0 && ((1 << uint((_la - 25))) & ((1 << (RuParserIF - 25)) | (1 << (RuParserWHILE - 25)) | (1 << (RuParserLOG - 25)) | (1 << (RuParserIMPRIMIR - 25)) | (1 << (RuParserID - 25)) | (1 << (RuParserOTRO - 25)))) != 0) {
		{
			p.SetState(27)
			p.Sentencia()
		}


		p.SetState(32)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}



	return localctx
}


// ISentenciaContext is an interface to support dynamic dispatch.
type ISentenciaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_OTRO returns the _OTRO token.
	Get_OTRO() antlr.Token 


	// Set_OTRO sets the _OTRO token.
	Set_OTRO(antlr.Token) 


	// IsSentenciaContext differentiates from other interfaces.
	IsSentenciaContext()
}

type SentenciaContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	_OTRO antlr.Token
}

func NewEmptySentenciaContext() *SentenciaContext {
	var p = new(SentenciaContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RuParserRULE_sentencia
	return p
}

func (*SentenciaContext) IsSentenciaContext() {}

func NewSentenciaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SentenciaContext {
	var p = new(SentenciaContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RuParserRULE_sentencia

	return p
}

func (s *SentenciaContext) GetParser() antlr.Parser { return s.parser }

func (s *SentenciaContext) Get_OTRO() antlr.Token { return s._OTRO }


func (s *SentenciaContext) Set_OTRO(v antlr.Token) { s._OTRO = v }


func (s *SentenciaContext) Asignacion() IAsignacionContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAsignacionContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAsignacionContext)
}

func (s *SentenciaContext) SentenciaIf() ISentenciaIfContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISentenciaIfContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISentenciaIfContext)
}

func (s *SentenciaContext) SentenciaWhile() ISentenciaWhileContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISentenciaWhileContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISentenciaWhileContext)
}

func (s *SentenciaContext) Log() ILogContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILogContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILogContext)
}

func (s *SentenciaContext) Imprimir() IImprimirContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImprimirContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImprimirContext)
}

func (s *SentenciaContext) OTRO() antlr.TerminalNode {
	return s.GetToken(RuParserOTRO, 0)
}

func (s *SentenciaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SentenciaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *SentenciaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.EnterSentencia(s)
	}
}

func (s *SentenciaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.ExitSentencia(s)
	}
}

func (s *SentenciaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case RuVisitor:
		return t.VisitSentencia(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *RuParser) Sentencia() (localctx ISentenciaContext) {
	this := p
	_ = this

	localctx = NewSentenciaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, RuParserRULE_sentencia)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(40)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case RuParserID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(33)
			p.Asignacion()
		}


	case RuParserIF:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(34)
			p.SentenciaIf()
		}


	case RuParserWHILE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(35)
			p.SentenciaWhile()
		}


	case RuParserLOG:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(36)
			p.Log()
		}


	case RuParserIMPRIMIR:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(37)
			p.Imprimir()
		}


	case RuParserOTRO:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(38)

			var _m = p.Match(RuParserOTRO)

			localctx.(*SentenciaContext)._OTRO = _m
		}
		fmt.Println("caracter desconocido: ", (func() string { if localctx.(*SentenciaContext).Get_OTRO() == nil { return "" } else { return localctx.(*SentenciaContext).Get_OTRO().GetText() }}()));



	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}


	return localctx
}


// IAsignacionContext is an interface to support dynamic dispatch.
type IAsignacionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAsignacionContext differentiates from other interfaces.
	IsAsignacionContext()
}

type AsignacionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAsignacionContext() *AsignacionContext {
	var p = new(AsignacionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RuParserRULE_asignacion
	return p
}

func (*AsignacionContext) IsAsignacionContext() {}

func NewAsignacionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AsignacionContext {
	var p = new(AsignacionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RuParserRULE_asignacion

	return p
}

func (s *AsignacionContext) GetParser() antlr.Parser { return s.parser }

func (s *AsignacionContext) ID() antlr.TerminalNode {
	return s.GetToken(RuParserID, 0)
}

func (s *AsignacionContext) ASIGNA() antlr.TerminalNode {
	return s.GetToken(RuParserASIGNA, 0)
}

func (s *AsignacionContext) Expr() IExprContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *AsignacionContext) PTOCOMA() antlr.TerminalNode {
	return s.GetToken(RuParserPTOCOMA, 0)
}

func (s *AsignacionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AsignacionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *AsignacionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.EnterAsignacion(s)
	}
}

func (s *AsignacionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.ExitAsignacion(s)
	}
}

func (s *AsignacionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case RuVisitor:
		return t.VisitAsignacion(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *RuParser) Asignacion() (localctx IAsignacionContext) {
	this := p
	_ = this

	localctx = NewAsignacionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, RuParserRULE_asignacion)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(RuParserID)
	}
	{
		p.SetState(43)
		p.Match(RuParserASIGNA)
	}
	{
		p.SetState(44)
		p.expr(0)
	}
	{
		p.SetState(45)
		p.Match(RuParserPTOCOMA)
	}



	return localctx
}


// ISentenciaIfContext is an interface to support dynamic dispatch.
type ISentenciaIfContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSentenciaIfContext differentiates from other interfaces.
	IsSentenciaIfContext()
}

type SentenciaIfContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySentenciaIfContext() *SentenciaIfContext {
	var p = new(SentenciaIfContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RuParserRULE_sentenciaIf
	return p
}

func (*SentenciaIfContext) IsSentenciaIfContext() {}

func NewSentenciaIfContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SentenciaIfContext {
	var p = new(SentenciaIfContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RuParserRULE_sentenciaIf

	return p
}

func (s *SentenciaIfContext) GetParser() antlr.Parser { return s.parser }

func (s *SentenciaIfContext) AllIF() []antlr.TerminalNode {
	return s.GetTokens(RuParserIF)
}

func (s *SentenciaIfContext) IF(i int) antlr.TerminalNode {
	return s.GetToken(RuParserIF, i)
}

func (s *SentenciaIfContext) AllBloqueCondicional() []IBloqueCondicionalContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBloqueCondicionalContext); ok {
			len++
		}
	}

	tst := make([]IBloqueCondicionalContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBloqueCondicionalContext); ok {
			tst[i] = t.(IBloqueCondicionalContext)
			i++
		}
	}

	return tst
}

func (s *SentenciaIfContext) BloqueCondicional(i int) IBloqueCondicionalContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBloqueCondicionalContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBloqueCondicionalContext)
}

func (s *SentenciaIfContext) AllELSE() []antlr.TerminalNode {
	return s.GetTokens(RuParserELSE)
}

func (s *SentenciaIfContext) ELSE(i int) antlr.TerminalNode {
	return s.GetToken(RuParserELSE, i)
}

func (s *SentenciaIfContext) BloqueDeSentencia() IBloqueDeSentenciaContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBloqueDeSentenciaContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBloqueDeSentenciaContext)
}

func (s *SentenciaIfContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SentenciaIfContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *SentenciaIfContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.EnterSentenciaIf(s)
	}
}

func (s *SentenciaIfContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.ExitSentenciaIf(s)
	}
}

func (s *SentenciaIfContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case RuVisitor:
		return t.VisitSentenciaIf(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *RuParser) SentenciaIf() (localctx ISentenciaIfContext) {
	this := p
	_ = this

	localctx = NewSentenciaIfContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, RuParserRULE_sentenciaIf)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		p.Match(RuParserIF)
	}
	{
		p.SetState(48)
		p.BloqueCondicional()
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(49)
				p.Match(RuParserELSE)
			}
			{
				p.SetState(50)
				p.Match(RuParserIF)
			}
			{
				p.SetState(51)
				p.BloqueCondicional()
			}


		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	if _la == RuParserELSE {
		{
			p.SetState(57)
			p.Match(RuParserELSE)
		}
		{
			p.SetState(58)
			p.BloqueDeSentencia()
		}

	}



	return localctx
}


// IBloqueCondicionalContext is an interface to support dynamic dispatch.
type IBloqueCondicionalContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBloqueCondicionalContext differentiates from other interfaces.
	IsBloqueCondicionalContext()
}

type BloqueCondicionalContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBloqueCondicionalContext() *BloqueCondicionalContext {
	var p = new(BloqueCondicionalContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = RuParserRULE_bloqueCondicional
	return p
}

func (*BloqueCondicionalContext) IsBloqueCondicionalContext() {}

func NewBloqueCondicionalContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BloqueCondicionalContext {
	var p = new(BloqueCondicionalContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = RuParserRULE_bloqueCondicional

	return p
}

func (s *BloqueCondicionalContext) GetParser() antlr.Parser { return s.parser }

func (s *BloqueCondicionalContext) APAR() antlr.TerminalNode {
	return s.GetToken(RuParserAPAR, 0)
}

func (s *BloqueCondicionalContext) Expr() IExprContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *BloqueCondicionalContext) CPAR() antlr.TerminalNode {
	return s.GetToken(RuParserCPAR, 0)
}

func (s *BloqueCondicionalContext) BloqueDeSentencia() IBloqueDeSentenciaContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBloqueDeSentenciaContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBloqueDeSentenciaContext)
}

func (s *BloqueCondicionalContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BloqueCondicionalContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *BloqueCondicionalContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.EnterBloqueCondicional(s)
	}
}

func (s *BloqueCondicionalContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RuListener); ok {
		listenerT.ExitBloqueCondicional(s)
	}
}

func (s *BloqueCondicionalContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case RuVisitor:
		return t.VisitBloqueCondicional(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *RuParser) BloqueCondicional() (localctx IBloqueCondicionalContext) {
	this := p
	_ = this

	localctx = NewBloqueCondicionalContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, RuParserRULE_bloqueCondicional)

	defer func() {
		p.ExitRule()
	}()
